# robust-cl

./: .gitignore  NOTES.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
experiments/: plot_results.py  run_all.py  run_sweep.py
results/: cp_trace.csv  results.csv
src/data/: generate.py
src/evaluation/: metrics.py
src/methods/: ccg.py  cp.py  nominal.py  random_scenarios.py  robust_classification.py  wrapper.py
src/models/: embed.py  train.py
src/utils/: perturbations.py
